--- a/Final Year Project Dissertation/references.tex
+++ b/Final Year Project Dissertation/references.tex
@@ -70,5 +70,9 @@ For more information or a more in depth look at the source code and other aspect
 - git clone https://github.com/AndreasFahey/AppliedProject-DateControl
 \newline
 
+Here is the GitHub Repository Link:
+\newline
+\url{https://github.com/AndreasFahey/AppliedProject-DateControl}
+
 
 
